--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
 				<div class="nav__menu">
 					<a class="nav__menu-item nav__menu-item--active" href="#pricing">Dobrodošli</a>
 					<a class="nav__menu-item" href="#o-nas">O nas</a>
-					<a class="nav__menu-item" href="#book-a-Demo">Aktivnosti</a>
+					<a class="nav__menu-item" href="#activities">Aktivnosti</a>
 					<a class="nav__menu-item" href="#pricing">Dobr</a>
 					<a class="nav__menu-item" href="#use-сases">Use</a>
 					<a class="nav__menu-item" href="#book-a-Demo">Book</a>
@@ -40,7 +40,7 @@
 			<div class="burger-menu__container">
 				<a class="burger-menu__item" href="#pricing">Dobrodošli</a>
 				<a class="burger-menu__item" href="#o-nas">O nas</a>
-				<a class="burger-menu__item" href="#book-a-Demo">Book a Demo</a>
+				<a class="burger-menu__item" href="#activities">Aktivnosti</a>
 				<a class="burger-menu__item" href="#pricing">Dobr</a>
 				<a class="burger-menu__item" href="#use-сases">Use</a>
 				<a class="burger-menu__item" href="#book-a-Demo">Book</a>
@@ -58,12 +58,12 @@
 			</a>
 		</div>
 	</section>
-	<section class="o-nas" >
+	<section class="o-nas" id="o-nas">
 		<div class="container">
 			<div class="o-nas__flex-container">
 				<img src="./img/palms-heart.png" alt="palms heart" class="o-nas__img">
 				<div class="o-nas__content">
-					<h2 class="o-nas__title" id="o-nas">O nas</h2>
+					<h2 class="o-nas__title">O nas</h2>
 					<p class="o-nas__subtitle">Kdo smo mi?</p>
 					<div class="o-nas__text-one">
 						Evangelikalna cerkev v mestu Kočevje - to je skupnost vernikov krščanske vere, združenih v veri v
@@ -84,6 +84,52 @@
 		</video>
   </div>
    -->
+	<section class="activities" id="activities">
+		<div class="container">
+			<div class="activities__flex-container">
+				<div class="activities__block-information">
+					<div class="activities__wrapper">
+						<div class="activities__block-content">
+							<div class="activities__text-wrapper">
+								<h2 class="activities__title" id="aktivnosti">Aktivnosti</h2>
+								<!-- <h3 class="activities__text-title">Vabimo vas, da se nam pridružite!</h3> -->
+								<p class="activities__text">
+									Če iščete duhovno skupnost, kjer lahko poglobite svojo vero in služite drugim, vas vabimo, da
+									se
+									nam pridružite. Vedno smo veseli, da pozdravimo nove ljudi v naši skupnosti
+								</p>
+								<p class="activities__sunday">Vsako nedeljo ob 9.30
+								</p>
+								<p class="activities__wednesday">Vsako sredo mala skupina ob 18.00</p>
+								<p class="activities__adress">
+									Naš naslov: Reška cesta 7b, 1330 Kočevje.
+								</p>
+							</div>
+						</div>
+						<div class="activities__map-container">
+							<iframe class="activities__map"
+								src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2789.7094558942263!2d14.86296918839201!3d45.63657272561238!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4764ee167730826f%3A0x7dc2df66611573e7!2sRe%C5%A1ka%20cesta%207b%2C%201330%20Ko%C4%8Devje!5e0!3m2!1suk!2ssi!4v1714550068073!5m2!1suk!2ssi"
+								width=100% height=100% style="border:0;" allowfullscreen="" loading="lazy"
+								referrerpolicy="no-referrer-when-downgrade">
+							</iframe>
+						</div>
+					</div>
+				</div>
+
+				<div class="activities__block-img">
+					<div class="activities__img-container-text">
+						<h3 class="activities__img-title">
+							Pridružite se nam pri nedeljskem bogoslužju in majhnih skupinah
+						</h3>
+						<p class="activities__img-text">Vabljeni ste!</p>
+					</div>
+					<img class="activities__img" src="./img/Join-Us-for-Sunday-Worship-and-Small-Group.png"
+						alt="activities img">
+				</div>
+			</div>
+		</div>
+
+	</section>
 
 </body>
 
