feat: add section dogmatis

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
 					<a class="nav__menu-item nav__menu-item--active" href="#pricing">Dobrodošli</a>
 					<a class="nav__menu-item" href="#o-nas">O nas</a>
 					<a class="nav__menu-item" href="#activities">Aktivnosti</a>
-					<a class="nav__menu-item" href="#pricing">Dobr</a>
+					<a class="nav__menu-item" href="#kaj-verujemo">Kaj verujemo</a>
 					<a class="nav__menu-item" href="#use-сases">Use</a>
 					<a class="nav__menu-item" href="#book-a-Demo">Book</a>
 				</div>
@@ -41,7 +41,7 @@
 				<a class="burger-menu__item" href="#pricing">Dobrodošli</a>
 				<a class="burger-menu__item" href="#o-nas">O nas</a>
 				<a class="burger-menu__item" href="#activities">Aktivnosti</a>
-				<a class="burger-menu__item" href="#pricing">Dobr</a>
+				<a class="burger-menu__item" href="#kaj-verujemo">Kaj verujemo</a>
 				<a class="burger-menu__item" href="#use-сases">Use</a>
 				<a class="burger-menu__item" href="#book-a-Demo">Book</a>
 			</div>
@@ -61,7 +61,7 @@
 	<section class="o-nas" id="o-nas">
 		<div class="container">
 			<div class="o-nas__flex-container">
-				<img src="./img/palms-heart.png" alt="palms heart" class="o-nas__img">
+				<img src="./img/about-us.png" alt="palms heart" class="o-nas__img">
 				<div class="o-nas__content">
 					<h2 class="o-nas__title">O nas</h2>
 					<p class="o-nas__subtitle">Kdo smo mi?</p>
@@ -115,7 +115,6 @@
 						</div>
 					</div>
 				</div>
-
 				<div class="activities__block-img">
 					<div class="activities__img-container-text">
 						<h3 class="activities__img-title">
@@ -128,7 +127,98 @@
 				</div>
 			</div>
 		</div>
+	</section>
+	<section class="dogmatics" id="kaj-verujemo">
+		<div class="container">
+			<h2 class="dogmatics__title">Kaj verujemo</h2>
+			<div class="dogmatics__flex-container">
+				<div class="dogmatics__card">
+					<img src="./img/God-card.jpg" alt="card image" class="dogmatics__card-img">
+					<div class="dogmatics__card-wrapper">
+						<h3 class="dogmatics__card-title">Vera v enega Boga</h3>
+						<div class="dogmatics__card-text">
+							Verujemo v enega Boga, Stvarnika vsega stvarstva, ki se je razodel kot Oče, Sin in Sveti Duh.
+						</div>
+					</div>
+				</div>
+				<div class="dogmatics__card">
+					<img src="./img/bible-card.jpg" alt="card image" class="dogmatics__card-img">
+					<div class="dogmatics__card-wrapper">
+						<h3 class="dogmatics__card-title">Avtoriteta Svete Pisma</h3>
+						<div class="dogmatics__card-text">
+							Priznavamo Biblijo kot nezmotljivo Božjo Besedo, navdihnjeno s strani Svetega Duha, vir resnice in
+							vodilo za naše življenje.
+						</div>
+					</div>
 
+				</div>
+				<div class="dogmatics__card">
+					<img src="./img/jesus-card.jpg" alt="card image" class="dogmatics__card-img">
+					<div class="dogmatics__card-wrapper">
+						<h3 class="dogmatics__card-title">Odkupljenje skozi Jezusa Kristusa</h3>
+						<div class="dogmatics__card-text">
+							Verujemo, da je Jezus Kristus, Božji Sin, prišel na svet, da bi umrl za grehe sveta in zagotovil
+							odkupljenje za vse, ki vanj verujejo
+						</div>
+					</div>
+
+				</div>
+				<div class="dogmatics__card">
+					<img src="./img/doNot-deels-card.jpg" alt="card image" class="dogmatics__card-img">
+					<div class="dogmatics__card-wrapper">
+						<h3 class="dogmatics__card-title">Rešitev le skozi vero</h3>
+						<div class="dogmatics__card-text">
+							Trdimo, da je rešitev mogoča le skozi vero v Jezusa Kristusa, ne pa skozi lastna prizadevanja ali
+							zasluge
+						</div>
+					</div>
+
+				</div>
+				<div class="dogmatics__card">
+					<img src="./img/church-card.jpg" alt="card image" class="dogmatics__card-img">
+					<div class="dogmatics__card-wrapper">
+						<h3 class="dogmatics__card-title">Pomen Cerkve</h3>
+						<div class="dogmatics__card-text">
+							Cerkev vidimo kot Kristusovo telo, združeno v veri in poklicano izpolnjevati Njegovo voljo na
+							zemlji
+						</div>
+					</div>
+
+				</div>
+				<div class="dogmatics__card">
+					<img src="./img/baptism-card.jpg" alt="card image" class="dogmatics__card-img">
+					<div class="dogmatics__card-wrapper">
+						<h3 class="dogmatics__card-title">Praksa krsta po veri</h3>
+						<div class="dogmatics__card-text">
+							Sledimo zgledu prvih kristjanov in prakticiramo krst vernikov na podlagi njihove vere v Jezusa
+							Kristusa
+						</div>
+					</div>
+
+				</div>
+				<div class="dogmatics__card">
+					<img src="./img/definitly-bible.jpg" alt="card image" class="dogmatics__card-img">
+					<div class="dogmatics__card-wrapper">
+						<h3 class="dogmatics__card-title">Temeljenje na Božji Besedi</h3>
+						<div class="dogmatics__card-text">
+							Zatrdimo, da morajo biti vsa naša prepričanja in prakse utemeljena na Svetem Pismu
+						</div>
+					</div>
+
+				</div>
+				<div class="dogmatics__card">
+					<img src="./img/evangelism-card.jpg" alt="card image" class="dogmatics__card-img">
+					<div class="dogmatics__card-wrapper">
+						<h3 class="dogmatics__card-title">Poziv k oznanjevanju in učenju</h3>
+						<div class="dogmatics__card-text">
+							Poklicani smo, da delamo učence vseh narodov, oznanjajoč evangelij Jezusa Kristusa in jih učimo
+							Njegovemu nauku
+						</div>
+					</div>
+
+				</div>
+			</div>
+		</div>
 	</section>
 
 </body>
