feat: add footer

--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,8 @@
 					<a class="nav__menu-item" href="#o-nas">O nas</a>
 					<a class="nav__menu-item" href="#activities">Aktivnosti</a>
 					<a class="nav__menu-item" href="#kaj-verujemo">Kaj verujemo</a>
-					<a class="nav__menu-item" href="#use-сases">Use</a>
-					<a class="nav__menu-item" href="#book-a-Demo">Book</a>
+					<a class="nav__menu-item" href="#minister">O pastorju</a>
+					<a class="nav__menu-item" href="#contacts">Kontakti</a>
 				</div>
 			</div>
 		</div>
@@ -42,8 +42,8 @@
 				<a class="burger-menu__item" href="#o-nas">O nas</a>
 				<a class="burger-menu__item" href="#activities">Aktivnosti</a>
 				<a class="burger-menu__item" href="#kaj-verujemo">Kaj verujemo</a>
-				<a class="burger-menu__item" href="#use-сases">Use</a>
-				<a class="burger-menu__item" href="#book-a-Demo">Book</a>
+				<a class="burger-menu__item" href="#minister">O pastorju</a>
+				<a class="burger-menu__item" href="#contacts">Kontakti</a>
 			</div>
 		</div>
 	</div>
@@ -77,13 +77,6 @@
 				</div>
 			</div>
 	</section>
-	<!-- <div class="video-container">
-		<video controls autoplay loop muted>
-			 <source src="./img/Join Us for Sunday Worship and Small Group 1.mp4" type="video/mp4">
-			 Your browser does not support the video tag.
-		</video>
-  </div>
-   -->
 	<section class="activities" id="activities">
 		<div class="container">
 			<div class="activities__flex-container">
@@ -92,7 +85,6 @@
 						<div class="activities__block-content">
 							<div class="activities__text-wrapper">
 								<h2 class="activities__title" id="aktivnosti">Aktivnosti</h2>
-								<!-- <h3 class="activities__text-title">Vabimo vas, da se nam pridružite!</h3> -->
 								<p class="activities__text">
 									Če iščete duhovno skupnost, kjer lahko poglobite svojo vero in služite drugim, vas vabimo, da
 									se
@@ -150,7 +142,6 @@
 							vodilo za naše življenje.
 						</div>
 					</div>
-
 				</div>
 				<div class="dogmatics__card">
 					<img src="./img/jesus-card.jpg" alt="card image" class="dogmatics__card-img">
@@ -161,7 +152,6 @@
 							odkupljenje za vse, ki vanj verujejo
 						</div>
 					</div>
-
 				</div>
 				<div class="dogmatics__card">
 					<img src="./img/doNot-deels-card.jpg" alt="card image" class="dogmatics__card-img">
@@ -172,7 +162,6 @@
 							zasluge
 						</div>
 					</div>
-
 				</div>
 				<div class="dogmatics__card">
 					<img src="./img/church-card.jpg" alt="card image" class="dogmatics__card-img">
@@ -183,7 +172,6 @@
 							zemlji
 						</div>
 					</div>
-
 				</div>
 				<div class="dogmatics__card">
 					<img src="./img/baptism-card.jpg" alt="card image" class="dogmatics__card-img">
@@ -194,7 +182,6 @@
 							Kristusa
 						</div>
 					</div>
-
 				</div>
 				<div class="dogmatics__card">
 					<img src="./img/definitly-bible.jpg" alt="card image" class="dogmatics__card-img">
@@ -204,7 +191,6 @@
 							Zatrdimo, da morajo biti vsa naša prepričanja in prakse utemeljena na Svetem Pismu
 						</div>
 					</div>
-
 				</div>
 				<div class="dogmatics__card">
 					<img src="./img/evangelism-card.jpg" alt="card image" class="dogmatics__card-img">
@@ -215,11 +201,111 @@
 							Njegovemu nauku
 						</div>
 					</div>
-
 				</div>
 			</div>
 		</div>
 	</section>
+	<section class="minister" id="minister">
+		<div class="container">
+			<div class="minister__flex-container">
+				<img src="./img/minister.jpg" alt="minister of the church" class="minister__img">
+				<div class="minister__text-wrapper">
+					<h3 class="minister__title">O pastorju</h3>
+					<div class="minister__text">
+						<p class="minister__text-pastor-one">
+							Pastor Toni Mrvič je diplomant Evangelijske teološke fakultete.
+							V začetnih letih delovanja je bil vodja mladinske skupine,
+							pridigar ter duhovni oskrbovalec zapornikov na Dobu.
+							Od leta 2001 živi in deluje v Kočevju. V začetku je vodil
+							podružnično cerkev, ki je leta 2014 postala samostojna lokalna Evangelijska
+							cerkev.
+						</p>
+						<p class="minister__text-pastor-two">
+							Poleg pastoralnega dela v Kočevju vodi tudi biblično skupino v Straži.
+							Je organizator in vodja mnogih humanitarnih in kulturnih dogodkov.
+							Na mnogih tiskanih, elektronskih in internetnih medijih lahko najdete
+							njegove članke in kolumne, kot tudi dejstva o njem in njegovem delu.
+						</p>
+					</div>
+				</div>
+	</section>
+	<section class="footer">
+		<div class="container">
+			<div class="footer__grid-container">
+				<div class="footer__text-wrapper">
+					<div class="footer__ekc-container">
+						<P class="footer__ekc-text">
+							Evangelikalna cerkev v Kočevju je protestantska skupnost, ki je del <br />
+							<span><img src="./img/EKC-cross-transparent.png" alt="EKC cross" class="footer__img">
+								"Evangelikalne Krščanske Zveze Cerkva Slovenije."</span>
+							Naša misija je prinašati v svet in oznanjati
+							evangelij Jezusa Kristusa.
+						</P>
+						<a href="https://www.biblija.net/biblija.cgi?m=Jn+3&id13=1&pos=0&set=2&l=sl"
+							class="footer__bible-text">
+							"Bog je namreč svet tako vzljubil, da je dal svojega edinorojenega Sina,
+							da bi se nihče, kdor vanj veruje, ne pogubil, ampak bi imel večno življenje."
+							<span>Jn. 3,16</span>
+						</a>
+					</div>
+				</div>
+				<div class="footer__contacts" id="contacts">
+					<h3 class="footer__contacts-title">Kontakti</h3>
+					<p class="footer__contacts-telephone">
+						<span>telefon:</span>
+						<a href="tel:+38631546182">+3(86)31546182</a>
+					</p>
+					<p class="footer__contacts-mail">
+						<span>E-pošta:</span>
+						<a href="mailto:QpDx6@example.com">QpDx6@example.com</a>
+					</p>
+					<p class="footer__contacts-address">
+						<span>Naš naslov:</span>
+						<a
+							href="https://www.google.com/maps/place/Re%C5%A1ka+cesta+7b,+1330+Ko%C4%8Devje/@45.636833,14.862922,15z/data=!4m6!3m5!1s0x4764ee167730826f:0x7dc2df66611573e7!8m2!3d45.6368331!4d14.8629218!16s%2Fg%2F11c0zhl47y?hl=uk&entry=ttu">
+							Reška cesta 7b, 1330 Kočevje
+						</a>
+					</p>
+					<button class="footer__contacts-btn">Pišite nam</button>
+					<!-- 	<a href='https://invite.viber.com/?g=GWP24O7LclDi1nedfpqGv1XHPISrnhjG' className="contacts__links">
+						<img className='viber' src="./icons/contacts_icons/viber.svg" alt='Viber' />
+					</a>
+					<a href='https://invite.viber.com/?g=GWP24O7LclDi1nedfpqGv1XHPISrnhjG' className="contacts__links">
+						<img className='viber' src="./icons/contacts_icons/whatsapp.svg" alt='Whatsapp' />
+					</a>
+					<a href='https://invite.viber.com/?g=GWP24O7LclDi1nedfpqGv1XHPISrnhjG' className="contacts__links">
+						<img className='viber' src="./icons/contacts_icons/Facebook.svg" alt='Whatsapp' />
+					</a> -->
+				</div>
+				<ul class="footer__nav">
+					<li>
+						<a class="footer__nav-item" href="#welcome">Dobrodošli</a>
+					</li>
+					<li>
+						<a class="footer__nav-item" href="#o-nas">O nas</a>
+					</li>
+					<li>
+						<a class="footer__nav-item" href="#activities">Aktivnosti</a>
+					</li>
+					<li>
+						<a class="footer__nav-item" href="#kaj-verujemo">Kaj verujemo</a>
+					</li>
+					<li>
+						<a class="footer__nav-item" href="#minister">O pastorju</a>
+					</li>
+					<li>
+						<a class="footer__nav-item" href="#contacts">Kontakti</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</section>
+	<div class="block__copyright">
+		<div class="container">
+			<p class="block__copyright-text">© 2024. Evangeličanska cerkev Kočevje. All rights reserved.</p>
+		</div>
+		
+	</div>
 
 </body>
 
