feat: add social contacts in the minister block

--- a/src/index.html
+++ b/src/index.html
@@ -227,6 +227,30 @@
 							njegove članke in kolumne, kot tudi dejstva o njem in njegovem delu.
 						</p>
 					</div>
+					<span class="minister__divider"></span>
+					<div class="minister__contacts">
+						<div class="minister__contacts-block">
+							<a href='viber://chat?number=%2B38631546182' class="contacts__links">
+								<img class='minister__contacts-social' src="./icons/contacts_icons/viber.png" alt='Viber' />
+							</a>
+							<a href='https://wa.me/38631546182' class="contacts__links">
+								<img class='minister__contacts-social' src="./icons/contacts_icons/whatsapp.png"
+									alt='Whatsapp' />
+							</a>
+							<a href='https://www.facebook.com/toni.mrvic' class="contacts__links">
+								<img class='minister__contacts-social' src="./icons/contacts_icons/facebook.png"
+									alt='Whatsapp' />
+							</a>
+							<a href='https://www.youtube.com/channel/UCT8p3FEJke3MutLzIkyGCWQ' class="contacts__links">
+								<img class='minister__contacts-social' src="./icons/contacts_icons/youtube.png"
+									alt='Whatsapp' />
+							</a>
+						</div>
+						<div class="minister__contacts-telephone-mail">
+							<a href='tel:+38631546182' class="minister__link-telephone">+386 31 546 182</a>
+							<a href="mailto:toni.mrvic@evc.si" class="minister__link-mail">toni.mrvic@evc.si</a>
+						</div>
+					</div>
 				</div>
 	</section>
 	<section class="footer">
@@ -253,11 +277,11 @@
 					<h3 class="footer__contacts-title">Kontakti</h3>
 					<p class="footer__contacts-telephone">
 						<span>telefon:</span>
-						<a href="tel:+38631546182">+3(86)31546182</a>
+						<a href="tel:+38631546182">+386 31 546 182</a>
 					</p>
 					<p class="footer__contacts-mail">
 						<span>E-pošta:</span>
-						<a href="mailto:QpDx6@example.com">QpDx6@example.com</a>
+						<a href="mailto:toni.mrvic@evc.si">toni.mrvic@evc.si</a>
 					</p>
 					<p class="footer__contacts-address">
 						<span>Naš naslov:</span>
@@ -267,15 +291,6 @@
 						</a>
 					</p>
 					<button class="footer__contacts-btn">Pišite nam</button>
-					<!-- 	<a href='https://invite.viber.com/?g=GWP24O7LclDi1nedfpqGv1XHPISrnhjG' className="contacts__links">
-						<img className='viber' src="./icons/contacts_icons/viber.svg" alt='Viber' />
-					</a>
-					<a href='https://invite.viber.com/?g=GWP24O7LclDi1nedfpqGv1XHPISrnhjG' className="contacts__links">
-						<img className='viber' src="./icons/contacts_icons/whatsapp.svg" alt='Whatsapp' />
-					</a>
-					<a href='https://invite.viber.com/?g=GWP24O7LclDi1nedfpqGv1XHPISrnhjG' className="contacts__links">
-						<img className='viber' src="./icons/contacts_icons/Facebook.svg" alt='Whatsapp' />
-					</a> -->
 				</div>
 				<ul class="footer__nav">
 					<li>
@@ -304,7 +319,7 @@
 		<div class="container">
 			<p class="block__copyright-text">© 2024. Evangeličanska cerkev Kočevje. All rights reserved.</p>
 		</div>
-		
+
 	</div>
 
 </body>
