--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
 					</div>
 				</a>
 				<div class="nav__menu">
-					<a class="nav__menu-item" href="#pricing">Dobrodošli</a>
+					<a class="nav__menu-item" href="#welcome">Dobrodošli</a>
 					<a class="nav__menu-item" href="#o-nas">O nas</a>
 					<a class="nav__menu-item" href="#activities">Aktivnosti</a>
 					<a class="nav__menu-item" href="#kaj-verujemo">Kaj verujemo</a>
@@ -252,7 +252,6 @@
 						</div>
 					</div>
 				</div>
-
 	</section>
 	<section class="footer">
 		<div class="container">
@@ -330,19 +329,15 @@
 						<label class="modal__label-name" for="name">Ime:</label>
 						<input class="modal__form-name" type="text" id="name" name="name" placeholder="Matej Novak">
 						<div class="error error-name hide">Name is required</div>
-
 						<label class="modal__label-email" for="email">E-naslov:</label>
 						<input class="modal__form-email" type="email" id="email" name="email"
 							placeholder="matej.novak@evc.si">
 						<div class="error error-mail hide">Email is invalid</div>
-
 						<label class="modal__label-message" for="message">Sporočilo:</label>
 						<textarea class="modal__form-message" id="message" name="message" rows="4"
 							placeholder="Tukaj je vaša sporočilo"></textarea>
 						<div class="error error-message hide">Message is required</div>
-
 						<button class="modal__btn" type="submit">Pošlji</button>
-
 						<div class="modal__container-privacy">
 							<input class="modal__checkbox" type="checkbox" name="checkbox" id="checkbox">
 							<div class="modal__container-item">
@@ -351,9 +346,12 @@
 							</div>
 						</div>
 						<div class="error error-checkbox hide">Potrditveno polje je obvezno</div>
-						<div id="xLoader"><div class="google-spin-wrapper"><div class="google-spin"></div></div></div>
+						<div id="xLoader">
+							<div class="google-spin-wrapper">
+								<div class="google-spin"></div>
+							</div>
+						</div>
 					</form>
-
 				</div>
 			</div>
 		</div>
