fix: chaing small ditails

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="si">
 
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Church</title>
+	<!-- Primary Meta Tags -->
+	<title>Evangelijska cerkev Kočevje</title>
+	<meta name="title" content="EVANGELIJSKA CERKEV KOČEVJE" />
+	<meta name="description"
+		content="Dobrodošli v Našo Cerkev! Čakamo vas na službi, da skupaj slavimo Boga in delimo Njegovo ljubezen z drugimi." />
 
+	<!-- Open Graph / Facebook -->
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://metatags.io/" />
+	<meta property="og:title" content="EVANGELIJSKA CERKEV KOČEVJE" />
+	<meta property="og:description"
+		content="Dobrodošli v Našo Cerkev! Čakamo vas na službi, da skupaj slavimo Boga in delimo Njegovo ljubezen z drugimi." />
+	<meta property="og:image" content="./img/church-card.jpg" />
+
+	<!-- Twitter -->
+	<meta property="twitter:card" content="summary_large_image" />
+	<meta property="twitter:url" content="https://metatags.io/" />
+	<meta property="twitter:title" content="EVANGELIJSKA CERKEV KOČEVJE" />
+	<meta property="twitter:description"
+		content="Dobrodošli v Našo Cerkev! Čakamo vas na službi, da skupaj slavimo Boga in delimo Njegovo ljubezen z drugimi." />
+	<meta property="twitter:image" content="./img/church-card.jpg" />
+
+	<!-- Meta Tags Generated with https://metatags.io -->
+	<link rel="apple-touch-icon" sizes="57x57" href="./img/favicon.ico/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="./img/favicon.ico/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="./img/favicon.ico/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="./img/favicon.ico/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="./img/favicon.ico/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="./img/favicon.ico/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="./img/favicon.ico/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="./img/favicon.ico/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="./img/favicon.ico/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192" href="./img/favicon.ico/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="./img/favicon.ico/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="./img/favicon.ico/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="./img/favicon.ico/favicon-16x16.png">
+	<link rel="manifest" href="./img/favicon.ico/manifest.json">
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="msapplication-TileImage" content="./img/favicon.ico/ms-icon-144x144.png">
+	<meta name="theme-color" content="#ffffff">
+	
 </head>
 
 <body>
@@ -13,7 +52,7 @@
 		<div class="container">
 			<div class="nav__wrapper">
 				<a class="nav__link-logo" href="#">
-					<img src="./icons/logo.png" class="nav__logo" alt="logo">
+					<img src="./icons/Designer.png" class="nav__logo" alt="logo">
 					<div class="nav__logo-text">
 						<span class="nav__logo-text-first">Evangelijska cerkev</span>
 						<span class="nav__logo-text-second">KOČEVJE</span>
@@ -66,13 +105,16 @@
 					<h2 class="o-nas__title">O nas</h2>
 					<p class="o-nas__subtitle">Kdo smo mi?</p>
 					<div class="o-nas__text-one">
-						Evangelikalna cerkev v mestu Kočevje - to je skupnost vernikov krščanske vere, združenih v veri v
-						Jezusa Kristusa. Smo del Slovenske evangeličanske cerkve in si prizadevamo slediti nauku evangelija v
+						Evangelikalna cerkev v mestu Kočevje - je skupnost vernikov krščanske vere, združenih v veri v
+						Jezusa Kristusa. Smo del Slovenske Evangelijske krščanske cerkve in si prizadevamo slediti nauku
+						evangelija v
 						našem vsakdanjem življenju.
 					</div>
 					<div class="o-nas__text-two">
-						Naša skupnost si prizadeva služiti Bogu in ljudem. Izvajamo bogoslužja, preučujemo Sveto pismo, molimo
-						drug za drugega, pomagamo potrebnim in delimo evangelij s svojim okoljem.
+						Naša skupnost si prizadeva služiti Bogu in ljudem. Izvajamo živahna bogoslužja s sodobno krščansko
+						glasbo ter življenjsko pridigo, se spodbujamo k vsestranskem napredku in pogolobitvi odnosov z Bogom
+						in s soljudmi, preučujemo Sveto pismo, molimo drug za drugega, pomagamo pomoči potrebnim in delimo
+						evangelij v svojem okolju.
 					</div>
 				</div>
 			</div>
@@ -86,13 +128,14 @@
 							<div class="activities__text-wrapper">
 								<h2 class="activities__title" id="aktivnosti">Aktivnosti</h2>
 								<p class="activities__text">
-									Če iščete duhovno skupnost, kjer lahko poglobite svojo vero in služite drugim, vas vabimo, da
+									Če iščete duhovno skupnost, kjer lahko poglobite svojo vero in najdete notranji mir, vas
+									vabimo, da
 									se
-									nam pridružite. Vedno smo veseli, da pozdravimo nove ljudi v naši skupnosti
+									nam pridružite. Z veseljem vam bomo izrekli dobrodošlico.
 								</p>
-								<p class="activities__sunday">Vsako nedeljo ob 9.30
+								<p class="activities__sunday">Bogoslužje je vsako nedeljo ob 9.30
 								</p>
-								<p class="activities__wednesday">Vsako sredo mala skupina ob 18.00</p>
+								<p class="activities__wednesday">Poglobljeno preučevanje Svetega pisma vsako sredo ob 18.00</p>
 								<p class="activities__adress">
 									Naš naslov: Reška cesta 7b, 1330 Kočevje.
 								</p>
@@ -110,9 +153,9 @@
 				<div class="activities__block-img">
 					<div class="activities__img-container-text">
 						<h3 class="activities__img-title">
-							Pridružite se nam pri nedeljskem bogoslužju in majhnih skupinah
+							Pridružite se nam pri nedeljskem bogoslužju in manjšihih skupinah
 						</h3>
-						<p class="activities__img-text">Vabljeni ste!</p>
+						<p class="activities__img-text">Dobrodošli!</p>
 					</div>
 					<img class="activities__img" src="./img/Join-Us-for-Sunday-Worship-and-Small-Group.png"
 						alt="activities img">
@@ -158,8 +201,8 @@
 					<div class="dogmatics__card-wrapper">
 						<h3 class="dogmatics__card-title">Rešitev le skozi vero</h3>
 						<div class="dogmatics__card-text">
-							Trdimo, da je rešitev mogoča le skozi vero v Jezusa Kristusa, ne pa skozi lastna prizadevanja ali
-							zasluge
+							Verujemo, da je rešitev Božji milostni dar, ki ga sprejmemo po veri v Jezusa Kristusa, in ta dar ni
+							pogojen z našimi prizadevanji.
 						</div>
 					</div>
 				</div>
@@ -168,8 +211,7 @@
 					<div class="dogmatics__card-wrapper">
 						<h3 class="dogmatics__card-title">Pomen Cerkve</h3>
 						<div class="dogmatics__card-text">
-							Cerkev vidimo kot Kristusovo telo, združeno v veri in poklicano izpolnjevati Njegovo voljo na
-							zemlji
+							Cerkev smo ljudje, ki si želimo biti v skupnosti z Bogom, po navodilih Svetega pisma.
 						</div>
 					</div>
 				</div>
@@ -178,27 +220,28 @@
 					<div class="dogmatics__card-wrapper">
 						<h3 class="dogmatics__card-title">Praksa krsta po veri</h3>
 						<div class="dogmatics__card-text">
-							Sledimo zgledu prvih kristjanov in prakticiramo krst vernikov na podlagi njihove vere v Jezusa
-							Kristusa
+							Po zgledu prvih kristjanov, krščujemo na podlagi osebne vere v Odrešenika Jezusa Kristusa.
 						</div>
 					</div>
 				</div>
 				<div class="dogmatics__card">
 					<img src="./img/definitly-bible.jpg" alt="card image" class="dogmatics__card-img">
 					<div class="dogmatics__card-wrapper">
-						<h3 class="dogmatics__card-title">Temeljenje na Božji Besedi</h3>
+						<h3 class="dogmatics__card-title">Sveto pismo</h3>
 						<div class="dogmatics__card-text">
-							Zatrdimo, da morajo biti vsa naša prepričanja in prakse utemeljena na Svetem Pismu
+							V Svetem pismu je izražena Božja ljubezen in nanjo nas tudi nagovarja. Zato verujemo in se
+							prizadevamo za življenje po Božji besedi.
 						</div>
 					</div>
 				</div>
 				<div class="dogmatics__card">
-					<img src="./img/evangelism-card.jpg" alt="card image" class="dogmatics__card-img">
+					<img src="./img/famaly.jpg" alt="card image" class="dogmatics__card-img dogmatics__card-img--last">
 					<div class="dogmatics__card-wrapper">
-						<h3 class="dogmatics__card-title">Poziv k oznanjevanju in učenju</h3>
+						<h3 class="dogmatics__card-title">
+							Spodbujamo družinske vrednote
+						</h3>
 						<div class="dogmatics__card-text">
-							Poklicani smo, da delamo učence vseh narodov, oznanjajoč evangelij Jezusa Kristusa in jih učimo
-							Njegovemu nauku
+							Mama in oče sta ključnega pomena za zdrav razvoj otroka in posledično za zdravo družbo.
 						</div>
 					</div>
 				</div>
@@ -213,18 +256,13 @@
 					<h3 class="minister__title">O pastorju</h3>
 					<div class="minister__text">
 						<p class="minister__text-pastor-one">
-							Pastor Toni Mrvič je diplomant Evangelijske teološke fakultete.
-							V začetnih letih delovanja je bil vodja mladinske skupine,
-							pridigar ter duhovni oskrbovalec zapornikov na Dobu.
-							Od leta 2001 živi in deluje v Kočevju. V začetku je vodil
-							podružnično cerkev, ki je leta 2014 postala samostojna lokalna Evangelijska
-							cerkev.
+							Pastor Toni Mrvič je diplomiral na Evangelijski teološki fakulteti.
+							Od leta 2001 živi in deluje v Kočevju, ob tem pa tudi vodi lokalno skupnost v Trebnjem.
 						</p>
 						<p class="minister__text-pastor-two">
-							Poleg pastoralnega dela v Kočevju vodi tudi biblično skupino v Straži.
-							Je organizator in vodja mnogih humanitarnih in kulturnih dogodkov.
-							Na mnogih tiskanih, elektronskih in internetnih medijih lahko najdete
-							njegove članke in kolumne, kot tudi dejstva o njem in njegovem delu.
+							Od leta
+							2023 opravlja poslanstvo predstojnika Evangelijske krščanske cerkve v Sloveniji. Je avtor dveh
+							knjig, mnogih člankov ter predavatelj po Sloveniji in tujini.
 						</p>
 					</div>
 					<span class="minister__divider"></span>
@@ -237,13 +275,9 @@
 								<img class='minister__contacts-social' src="./icons/contacts_icons/whatsapp.png"
 									alt='Whatsapp' />
 							</a>
-							<a href='https://www.facebook.com/toni.mrvic' class="contacts__links">
+							<a href='https://www.facebook.com/evangelijskacerkevkocevje/' class="contacts__links">
 								<img class='minister__contacts-social' src="./icons/contacts_icons/facebook.png"
-									alt='Whatsapp' />
-							</a>
-							<a href='https://www.youtube.com/channel/UCT8p3FEJke3MutLzIkyGCWQ' class="contacts__links">
-								<img class='minister__contacts-social' src="./icons/contacts_icons/youtube.png"
-									alt='Whatsapp' />
+									alt='Facebook' />
 							</a>
 						</div>
 						<div class="minister__contacts-telephone-mail">
@@ -261,7 +295,7 @@
 						<P class="footer__ekc-text">
 							Evangelikalna cerkev v Kočevju je protestantska skupnost, ki je del <br />
 							<span><img src="./img/EKC-cross-transparent.png" alt="EKC cross" class="footer__img">
-								"Evangelikalne Krščanske Zveze Cerkva Slovenije."</span>
+								"Evangelijske krščanske cerkve v Sloveniji."</span>
 							Naša misija je prinašati v svet in oznanjati
 							evangelij Jezusa Kristusa.
 						</P>
@@ -281,7 +315,7 @@
 					</p>
 					<p class="footer__contacts-mail">
 						<span>E-pošta:</span>
-						<a href="mailto:toni.mrvic@evc.si">toni.mrvic@evc.si</a>
+						<a href="mailto:church.kochevje@gmail.com">church.kochevje@gmail.com</a>
 					</p>
 					<p class="footer__contacts-address">
 						<span>Naš naslov:</span>
@@ -328,21 +362,21 @@
 					<form class="modal__form" id="contactForm" action="#" method="post">
 						<label class="modal__label-name" for="name">Ime:</label>
 						<input class="modal__form-name" type="text" id="name" name="name" placeholder="Matej Novak">
-						<div class="error error-name hide">Name is required</div>
+						<div class="error error-name hide">Ime je obvezno</div>
 						<label class="modal__label-email" for="email">E-naslov:</label>
 						<input class="modal__form-email" type="email" id="email" name="email"
 							placeholder="matej.novak@evc.si">
-						<div class="error error-mail hide">Email is invalid</div>
+						<div class="error error-mail hide">E-naslov je neveljaven</div>
 						<label class="modal__label-message" for="message">Sporočilo:</label>
 						<textarea class="modal__form-message" id="message" name="message" rows="4"
 							placeholder="Tukaj je vaša sporočilo"></textarea>
-						<div class="error error-message hide">Message is required</div>
+						<div class="error error-message hide">Sporočilo je potrebno</div>
 						<button class="modal__btn" type="submit">Pošlji</button>
 						<div class="modal__container-privacy">
 							<input class="modal__checkbox" type="checkbox" name="checkbox" id="checkbox">
 							<div class="modal__container-item">
-								S pošiljanjem se strinjate z našimi <a href="/#conditions">Pogoji</a> and <a
-									href="/#privacy">Politiko Zasebnosti</a>
+								S pošiljanjem se strinjate z našimi <a href="./privacy/privacy.html">Pogoji</a> and <a
+									href="./privacy/privacy.html">Politiko Zasebnosti</a>
 							</div>
 						</div>
 						<div class="error error-checkbox hide">Potrditveno polje je obvezno</div>
@@ -364,7 +398,7 @@
 	</section>
 	<div class="block__copyright">
 		<div class="container">
-			<p class="block__copyright-text">© 2024. Evangeličanska cerkev Kočevje. All rights reserved.</p>
+			<p class="block__copyright-text">© 2024. Evangelijska cerkev Kočevje. All rights reserved.</p>
 		</div>
 	</div>
 
