feat: add DOMContentLoaded in index.js

--- a/src/index.html
+++ b/src/index.html
@@ -295,7 +295,7 @@
 						<P class="footer__ekc-text">
 							Evangelikalna cerkev v Kočevju je protestantska skupnost, ki je del <br />
 							<span><img src="./img/EKC-cross-transparent.png" alt="EKC cross" class="footer__img">
-								"Evangelijske krščanske cerkve v Sloveniji."</span>
+								"Evangelijske krščanske cerkve"</span> v Sloveniji.
 							Naša misija je prinašati v svet in oznanjati
 							evangelij Jezusa Kristusa.
 						</P>
